# sony-headphones-control-linux

./: Cargo.toml  Readme.md
prototype/: main.py  meson.build  requirements.txt
src/: main.rs
