[package]
name = "sony-headphones-linux"
version = "0.1.0"
authors = ["Anton Palgunov <toxblh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blurz = "0.4.0"
clap = "3.0.0-beta.1"
bluetooth-serial-port = "0.5.1"
libc = "0.2.71"